# AI-Powered-Document-Search-RAG-Query-Service

./: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yml  document_processor.py  embeddings_service.py  main.py  pyproject.toml  rag_service.py  requirements.txt  test_document.py  vector_store.py
app/: config.py  database.py  globals.css  health.py  routes.py  schemas.py  security.py
app/core/: __init__.py  documents.py  embeddings.py  rag.py  sanitization.py
app/tests/: conftest.py  test_health.py  test_routes.py
components/: DocumentList.tsx  DocumentPanel.tsx  DocumentRow.tsx  Message.tsx  RAGChat.tsx  TypingIndicator.tsx
frontend/: .gitignore  package-lock.json  postcss.config.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatThread.tsx  DocumentList.tsx  DocumentPanel.tsx  DocumentRow.tsx  DocumentUploadZone.tsx  EmptyState.tsx  InputBar.tsx  Message.tsx  RAGChat.tsx  RAGChatClientShell.tsx  SourcesFootnote.tsx  StreamingText.tsx
frontend/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  calendar.tsx  card.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  form.tsx  hover-card.tsx  input-group.tsx  input-otp.tsx  input.tsx  item.tsx  kbd.tsx  menubar.tsx  navigation-menu.tsx  popover.tsx  progress.tsx  radio-group.tsx  select.tsx  separator.tsx  sheet.tsx  (+8 more)
frontend/lib/: api.ts  storage.ts
lib/: api.ts
